1999-07-27  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (java_get_swarm_class): Rename 
	java_get_class_from_objc_object to java_get_swarm_class.
	(objc_class_for_classname): New function.
	(java_ensure_class): Use objc_class_for_classname instead of
	objc_lookup_class.

1999-07-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* HDF5Object.m ([HDF -packObj:to:]): Improve type mismatch
	error message.

1999-07-21  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m: Add new global variables for different Control 
	States.
	(java_directory_objc_find): Add two additional cases for different
	Objective-C classes.
	(java_directory_update): Erase data entry after serach in java tree
	to eliminate redundancy.
	(java_instantiate): Create object by instantiating and calling 
	constructor on it.
	(java_directory_init): New function setFieldInSwarm that sets field
	in the SwarmEnvironment.
	(java_get_class_from_objc_object): New function that returns class
	for Objective-C object, and if it is a JavaProxy returns
	Objective-C class the corresponds to the Java class of the Java
	object JavaProxy represents.

	* DefObject.m: Declare extern global variable f_nameFid.
	([Object_s -forward::]): Use f_nameFid field id for signature
	field in Selector.

1999-07-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Zone.m ([Zone_c -alloc:]): Pad return pointer up to
	max alignment.

1999-07-12  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (java_ensure_selector): If there exists selector 
	with same name as Java method check to see, if the types match.
	(java_directory_init): Initialize probeLibrary field of 
	SwarmEnvironment.
	(java_directory_init): Initialize ControlState... fields in
	SwarmEnvironment that correspond to Symbols ControlState...
	from simtoolsgui.

1999-07-11  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (java_directory_objc_find): Use getTypeImplemented